force-app/main/default/objects/Architecture_Guide__kav/fields/Code_Examples__c.field-meta.xml
<CustomField>
    <fullName>Code_Examples__c</fullName>
    <label>Code Examples</label>
    <type>Html</type>
    <description>Code examples and implementation samples</description>
</CustomField>