force-app/main/default/objects/Architecture_Guide__kav/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <type>Html</type>
    <description>High-level overview of the architecture topic</description>
</CustomField>