force-app/main/default/objects/Architecture_Guide__kav/fields/Related_Resources__c.field-meta.xml
<CustomField>
    <fullName>Related_Resources__c</fullName>
    <label>Related Resources</label>
    <type>Html</type>
    <description>Links to related documentation and external resources</description>
</CustomField>