force-app/main/default/objects/Architecture_Guide__kav/fields/Technical_Details__c.field-meta.xml
<CustomField>
    <fullName>Technical_Details__c</fullName>
    <label>Technical Details</label>
    <type>Html</type>
    <description>Detailed technical information and implementation details</description>
</CustomField>